--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
   postgres:
     image: postgres:13
     ports:
-      - 5432:5432
+      - "5432:5432"
     environment:
       - POSTGRES_USER:postgres
       - POSTGRES_PASSWORD:my_pwd
+    volumes:
+      - postgres:/data/postgres
